Fix: stuck filter with no liked conferences

--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,11 @@
   background-color: transparent;
   border-radius: 5px;
 }
+
+.errorText {
+  text-align: center;
+}
+
+.showAllBtn {
+  width: 270px;
+}
